# LSP-eslint

./: .gitattributes  .release.json  LSP-eslint.sublime-commands  LSP-eslint.sublime-settings  Main.sublime-menu  README.md  compile-server.sh  package-lock.json  package.json  plugin.py  pyproject.toml  renovate.json  sublime-package.json
.github/workflows/: check-settings.yaml
language-server/: compile-language-server.sh  package-lock.json  package.json  webpack-disable-minimize.patch
messages/: 1.0.0.txt
scripts/: release.py
server/src/: eslintServer.ts
utils/: resources.py
vscode-eslint/: .eslintrc.json  compile-eslint-server.sh  package-lock.json  package.json
