[project]
name = "lsp-eslint"
version = "1.0"
requires-python = "==3.8"

[tool.pyright]
reportUnusedCallResult = "none"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
# Respect magic trailing commas.
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
case-sensitive = false
force-single-line = true
from-first = true
no-sections = true
order-by-type = false
required-imports = ["from __future__ import annotations"]

